# python-project-50

./: .codeclimate.yml  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  formatters.py  gendiff.py  parse_files.py  parsers.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: flat_json_out.txt  nested_json_out.txt
