[project]
name = "hexlet-code"
version = "0.1.0"
description = "Проект: Вычислитель отличий (Python)"
readme = "README.md"
requires-python = "~=3.12.0"
authors = [
    { name = "Sergey Knyazkov", email = "serg.r88@gmail.com" }
]
dependencies = [
    "pyyaml>=6.0.1",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[dependency-groups]
dev = [
    "flake8>=7.0.0",
    "flake8-isort>=6.1.1",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]
