[project]
name = "hexlet-code"
version = "0.1.0"
description = "Проект: Вычислитель отличий (Python)"
readme = "README.md"
requires-python = "~=3.12.0"
authors = [
    { name = "Sergey Knyazkov", email = "serg.r88@gmail.com" }
]
dependencies = [
    "pyyaml>=6.0.1",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[tool.ruff]
output-format = "concise"
line-length = 80
extend-exclude = ["__init__.py"]

[tool.ruff.lint]
extend-select = [
    "E", # pycodestyle Errors
    "W", # pycodestyle Warnings
    "C90", # mccabe
    "I", # isort
    "B", # flake8-bugbear
    "COM", # flake8-commas
    "Q", # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PL", # Pylint
    "N", # pep8-naming
]
ignore = ["COM812"] # Конфликт с ruff format
preview = true

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"
